[package]
name = "task-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
actix-web-lab = "0.20.2"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["postgres", "runtime-async-std-native-tls", "chrono"] }
tokio = "1.39.1"
